--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deep-freeze": "0.0.1",
     "expect": "^1.20.2",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
