--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "expect": "^1.20.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   },
   "scripts": {
